# therainbow

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
Embeddings/: README.md  sentencepiece_qwen3_embed.py  transformers_qwen3_embed.py  vllm_qwen3_embed
Image/: Qwen-Image-Edit.py  Qwen-Image.py
docs/: FIRST_FEATURE.md
src/therainbow/: __init__.py
